# revenue_ops_copilot

./: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: eval.yml
eval/: baseline.json  compare.py  dataset.jsonl  metrics.py  run_eval.py
migrations/: env.py
migrations/versions/: 119dabf51774_create_lead_state_table.py  50691814b9d6_create_events_table.py  63bb1a81f8e9_create_email_templates_table.py  6a92d427852e_create_tenant_config_table.py  7a48c1cbb8a0_create_outbox_table.py  8ad3c9617d17_create_prompts_table.py  e2498aa7a10c_create_runs_table.py
src/: config.py  logging_config.py
src/activities/: draft.py  followup.py  outbox.py  qualify.py
src/api/: leads.py  main.py  middleware.py  models.py  webhooks.py
src/db/: queries.py  (+3 more)
tests/: conftest.py  test_api_health.py  test_api_models.py  test_config.py  test_db_connection.py  test_draft_activity.py  test_draft_prompt.py  test_encryption.py  test_eval_compare.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_runner.py  test_fallback.py  test_followup_activity.py  test_followup_workflow.py  test_lead_workflow.py  test_leads_signal.py  test_leads_status.py  test_llm_client.py  test_logging_config.py  test_outbox_activity.py  test_outbox_queries.py  test_pricing.py  test_qualify_activity.py  test_qualify_prompt.py  test_queries.py  test_repair.py  test_request_id_middleware.py  test_sender_crm.py  test_sender_email.py  test_sender_loop.py  test_sender_poll.py  test_temporal_client.py  test_temporal_worker.py  test_webhooks.py  test_workflow_models.py
(+15 files in other folders)
