[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "revenue-ops-copilot"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "eval*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
